# dss-explain

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: dsss_engine.py  main.py  routes.py  schemas.py
backend/tests/: test_api.py  test_dsss_engine.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/common/: FormField.tsx  SignalCard.tsx  SpectrumComparison.tsx  SpectrumModal.tsx
frontend/src/components/transceiver/: TransceiverDiagram.tsx
frontend/src/state/: simulationStore.ts
