[project]
name = "dsss-backend"
version = "0.1.0"
description = "FastAPI backend for DSSS visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "numpy>=2.1.3,<3.0",
  "pydantic==2.9.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
